--- a/_sass/media-queries.scss
+++ b/_sass/media-queries.scss
@@ -95,7 +95,7 @@
   
   .content-region1 {
     margin-top: 3rem;
-    background: #047933 url("{{ site.github.url }}/images/empty-building.jpg") 45% 0% no-repeat;
+    background: #047933 url("{{ github.url }}/images/empty-building.jpg") 45% 0% no-repeat;
     background-size: intial;
   }
   
