--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,10 @@
 
-<div class="content-region3">
-    <div class="content-region3-top">
-        <h1>Our <span style="color:#f4b742">Commitment</span></h1>
-        <h2>MAKING A DIFFERENCE,<br> MILE AFTER MILE.</h2>
-        Eagle Lube is a family owned and locally operated business with staff that has over 30 years of experience. We opened our first location in 2016 with a commitment to providing excellent customer care and professional automotive services. After only one
-        year, Eagle Lube has become Pleasanton's trusted oil change provider. Our Mission is to add value to our customers by making available a broad range of critical, cost-effective, hi-tech products and services that will make our company a house
-        hold name.
-    </div>
 
     <div class="content-region3-bottom">
+         <h2>Location</h2>
+        <h3>415 N Bryant St<br>
+        Pleasanton, Texas 78064<br>
+        (830) 569 - 8106</h3>
         <h2>Hours of Operation</h2>
         <table class="responsive" style="border: 2px solid #ffffff; width: 320px; height: 240px; margin-right: auto; margin-left: auto; background-color: transparent;" cellspacing="0" cellpadding="0">
             <tbody>
@@ -55,7 +51,6 @@
     </ul>
     </div>
     <div class="copyright">
-        Phone: (830) 569-8106<br>
     Copyright © 2017 Eagle Lube - All Rights Reserved<br>
 Web Design by John Campbell
 </div>
