--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,9 +13,9 @@
    <option value="/pages/services/state-vehicle-inspection.html">STATE VEHICLE INSPECTION</option>
    <option value="/pages/services/other-services.html">OTHER SERVICES</option>
    <option value="/pages/about-us/about-us.html">ABOUT US</option>
-   <option value="/pages/about-us/how-did-we-do.html">HOW DID WE DO?</option>
+   <!--<option value="/pages/about-us/how-did-we-do.html">HOW DID WE DO?</option>-->
    <option value="/pages/about-us/contact-us.html">CONTACT US</option>
-   <option value="/pages/about-us/awards.html">AWARDS</option>
+   <!--<option value="/pages/about-us/awards.html">AWARDS</option>-->
   </select>
  </div>
  
@@ -70,9 +70,9 @@
     <div class="dropdown">
       <button onmouseover="myFunction2()" class="dropbtn"><a href="/pages/about-us/about-us.html">ABOUT US</a></button>
       <div id="aboutus" class="dropdown-content">
-       <a href="/pages/about-us/how-did-we-do.html">How did we do?</a>
+       <!--<a href="/pages/about-us/how-did-we-do.html">How did we do?</a>-->
        <a href="/pages/about-us/contact-us.html">Contact Us</a>
-       <a href="/pages/about-us/awards.html">Awards</a>
+       <!--<a href="/pages/about-us/awards.html">Awards</a>-->
       </div>
      </div>
      
