--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,14 +7,14 @@
  <!--MOBILE NAVIGATION-->
  <div class="mobilebutton-container">
   <select size="1" class="mobile-menu" onchange="location.href=this.value">
-   <option value="/">HOME</option>
-   <option value="/">SERVICES</option>
-   <option value="/pages/services/oil-change.html">OIL CHANGE</option>
-   <option value="/pages/services/state-vehicle-inspection.html">STATE VEHICLE INSPECTION</option>
-   <option value="/pages/services/other-services.html">OTHER SERVICES</option>
-   <option value="/pages/about-us/about-us.html">ABOUT US</option>
+   <option value="{{ site.github.url }}/">HOME</option>
+   <option value="{{ site.github.url }}/">SERVICES</option>
+   <option value="{{ site.github.url }}/pages/services/oil-change.html">OIL CHANGE</option>
+   <option value="{{ site.github.url }}/pages/services/state-vehicle-inspection.html">STATE VEHICLE INSPECTION</option>
+   <option value="{{ site.github.url }}/pages/services/other-services.html">OTHER SERVICES</option>
+   <option value="{{ site.github.url }}/pages/about-us/about-us.html">ABOUT US</option>
    <!--<option value="/pages/about-us/how-did-we-do.html">HOW DID WE DO?</option>-->
-   <option value="/pages/about-us/contact-us.html">CONTACT US</option>
+   <option value="{{ site.github.url }}/pages/about-us/contact-us.html">CONTACT US</option>
    <!--<option value="/pages/about-us/awards.html">AWARDS</option>-->
   </select>
  </div>
@@ -33,9 +33,9 @@
      <div class="dropdown">
       <button onmouseover="myFunction()" class="dropbtn"><a href="/">SERVICES</a></button>
       <div id="myDropdown" class="dropdown-content">
-       <a href="/pages/services/oil-change.html">Oil Changes</a>
-       <a href="/pages/services/state-vehicle-inspection.html">State Inspections</a>
-       <a href="/pages/services/other-services.html">Other Services</a>
+       <a href="{{ site.github.url }}/pages/services/oil-change.html">Oil Changes</a>
+       <a href="{{ site.github.url }}/pages/services/state-vehicle-inspection.html">State Inspections</a>
+       <a href="{{ site.github.url }}/pages/services/other-services.html">Other Services</a>
       </div>
      </div>
      
@@ -71,7 +71,7 @@
       <button onmouseover="myFunction2()" class="dropbtn"><a href="/pages/about-us/about-us.html">ABOUT US</a></button>
       <div id="aboutus" class="dropdown-content">
        <!--<a href="/pages/about-us/how-did-we-do.html">How did we do?</a>-->
-       <a href="/pages/about-us/contact-us.html">Contact Us</a>
+       <a href="{{ site.github.url }}/pages/about-us/contact-us.html">Contact Us</a>
        <!--<a href="/pages/about-us/awards.html">Awards</a>-->
       </div>
      </div>
