--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,13 +25,14 @@
  <div class="nonmobilenav-container">
   <ul>
    <li>
-    <a href="{{ site.github.url }}/index.html">HOME</a>
+    HOME
    </li>
    
    <!--SERVICES SECTION-->
    <li>
      <div class="dropdown">
-      <button onmouseover="myFunction()" class="dropbtn"><a href="{{ site.github.url }}/index.html">SERVICES</a></button>
+      <button onmouseover="myFunction()" class="dropbtn">
+      SERVICES</button>
       <div id="myDropdown" class="dropdown-content">
        <a href="{{ site.github.url }}/pages/services/oil-change.html">Oil Changes</a>
        <a href="{{ site.github.url }}/pages/services/state-vehicle-inspection.html">State Inspections</a>
@@ -68,9 +69,9 @@
    <!--ABOUT US SECTION-->
    <li>
     <div class="dropdown">
-      <button onmouseover="myFunction2()" class="dropbtn"><a href="{{ site.github.url }}/pages/about-us/about-us.html">ABOUT US</a></button>
+      <button onmouseover="myFunction2()" class="dropbtn">ABOUT US</button>
       <div id="aboutus" class="dropdown-content">
-       <!--<a href="/pages/about-us/how-did-we-do.html">How did we do?</a>-->
+       <a href="/pages/about-us/about-us.html">About Us</a>
        <a href="{{ site.github.url }}/pages/about-us/contact-us.html">Contact Us</a>
        <!--<a href="/pages/about-us/awards.html">Awards</a>-->
       </div>
