--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,10 +44,10 @@
 <footer>
     <div class="socialmedia-container">
     <ul>
-        <li><a target="_blank" title="Find us on Facebook!" href="https://www.facebook.com/Eagle-Lube-1625512357700873/"><img alt="Follow us on Facebook!" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0></a></li>
-        <li><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a></li>
-        <li><a target="_blank" title="follow me on instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a></li>
-        <li><a target="_blank" title="follow me on youtube" href="http://www.youtube.com/PLACEHOLDER"><img alt="follow me on youtube" src="https://c866088.ssl.cf3.rackcdn.com/assets/youtube30x30.png" border=0></a></li>
+        <li><a target="_blank" title="Find us on Facebook!" href="https://www.facebook.com/Eagle-Lube-1625512357700873/"><img alt="Follow us on Facebook!" src="//login.create.net/images/icons/user/facebook_30x30.png"></a></li>
+        <li><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png"></a></li>
+        <li><a target="_blank" title="follow me on instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png"></a></li>
+        <li><a target="_blank" title="follow me on youtube" href="http://www.youtube.com/PLACEHOLDER"><img alt="follow me on youtube" src="https://c866088.ssl.cf3.rackcdn.com/assets/youtube30x30.png"></a></li>
     </ul>
     </div>
     <div class="copyright">
