changes alla round

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         Pleasanton, Texas 78064<br>
         (830) 569 - 8106</h3>
         <h2>Hours of Operation</h2>
-        <table class="responsive" style="border: 2px solid #ffffff; width: 320px; height: 240px; margin-right: auto; margin-left: auto; background-color: transparent;" cellspacing="0" cellpadding="0">
+        <table class="responsive" style="border: 2px solid #ffffff; width: 320px; height: 240px; margin-right: auto; margin-left: auto; background-color: transparent;">
             <tbody>
                 <tr>
                     <td style="text-align: center;"><span style="color: #ffffff;">Monday</span></td>
@@ -39,7 +39,6 @@
             </tbody>
         </table>
     </div>
-</div>
 
 <footer>
     <div class="socialmedia-container">
