--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
  <div class="nonmobilenav-container">
   <ul>
    <li>
-    HOME
+   <a href="{{ site.github.url }}/index.html">HOME</a>
    </li>
    
    <!--SERVICES SECTION-->
@@ -71,7 +71,7 @@
     <div class="dropdown">
       <button onmouseover="myFunction2()" class="dropbtn">ABOUT US</button>
       <div id="aboutus" class="dropdown-content">
-       <a href="/pages/about-us/about-us.html">About Us</a>
+       <a href="{{ site.github.url }}/pages/about-us/about-us.html">About Us</a>
        <a href="{{ site.github.url }}/pages/about-us/contact-us.html">Contact Us</a>
        <!--<a href="/pages/about-us/awards.html">Awards</a>-->
       </div>
