--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,16 @@
 
 
-    <div class="content-region3-bottom">
-         <h2>Location</h2>
-        <h3>415 N Bryant St<br>
-        Pleasanton, Texas 78064<br>
-        (830) 569 - 8106</h3>
-        <h2>Hours of Operation</h2>
+<div class="content-region3-bottom">
+    <br>
+    <h2>Location</h2>
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3371.936444095652!2d-98.491521590609!3d28.962247880538765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865da7fd755f94d3%3A0xbf1cc6f0ba635e00!2sEagle+Lube!5e0!3m2!1sen!2sus!4v1497714502348"
+            width="320px" height="320px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+    <h3>415 N Bryant St<br> Pleasanton, Texas 78064<br> (830) 569 - 8106</h3>
+    <h2>Hours of Operation</h2>
+    <div>
         <table class="responsive" style="border: 2px solid #ffffff; width: 320px; height: 240px; margin-right: auto; margin-left: auto; background-color: transparent;">
             <tbody>
                 <tr>
@@ -39,7 +44,8 @@
             </tbody>
         </table>
     </div>
-
+</div>
+    
 <footer>
     <div class="socialmedia-container">
     <ul>
