--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,13 @@
-
-
 <div class="content-region3-bottom">
-    <br>
-    <h2>Location</h2>
-    <div>
+    <div class="location-container">
+        <h2>Location</h2>
+        <h3>415 N Bryant St<br> Pleasanton, Texas 78064<br> (830) 569 - 8106</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3371.936444095652!2d-98.491521590609!3d28.962247880538765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865da7fd755f94d3%3A0xbf1cc6f0ba635e00!2sEagle+Lube!5e0!3m2!1sen!2sus!4v1497714502348"
             width="320px" height="320px" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
+    <div class="hoursofopera">
+        <h2>Hours of Operation</h2>
 
-    <h3>415 N Bryant St<br> Pleasanton, Texas 78064<br> (830) 569 - 8106</h3>
-    <h2>Hours of Operation</h2>
-    <div>
         <table class="responsive" style="border: 2px solid #ffffff; width: 320px; height: 240px; margin-right: auto; margin-left: auto; background-color: transparent;">
             <tbody>
                 <tr>
@@ -45,18 +42,25 @@
         </table>
     </div>
 </div>
-    
+
 <footer>
     <div class="socialmedia-container">
-    <ul>
-        <li><a target="_blank" title="Find us on Facebook!" href="https://www.facebook.com/Eagle-Lube-1625512357700873/"><img alt="Follow us on Facebook!" src="//login.create.net/images/icons/user/facebook_30x30.png"></a></li>
-        <li><a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png"></a></li>
-        <li><a target="_blank" title="follow me on instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png"></a></li>
-        <li><a target="_blank" title="follow me on youtube" href="http://www.youtube.com/PLACEHOLDER"><img alt="follow me on youtube" src="https://c866088.ssl.cf3.rackcdn.com/assets/youtube30x30.png"></a></li>
-    </ul>
+        <ul>
+            <li>
+                <a target="_blank" title="Find us on Facebook!" href="https://www.facebook.com/Eagle-Lube-1625512357700873/"><img alt="Follow us on Facebook!" src="//login.create.net/images/icons/user/facebook_30x30.png"></a>
+            </li>
+            <li>
+                <a target="_blank" title="follow me on twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png"></a>
+            </li>
+            <li>
+                <a target="_blank" title="follow me on instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png"></a>
+            </li>
+            <li>
+                <a target="_blank" title="follow me on youtube" href="http://www.youtube.com/PLACEHOLDER"><img alt="follow me on youtube" src="https://c866088.ssl.cf3.rackcdn.com/assets/youtube30x30.png"></a>
+            </li>
+        </ul>
     </div>
     <div class="copyright">
-    Copyright © 2017 Eagle Lube - All Rights Reserved<br>
-Web Design by John Campbell
-</div>
+        Copyright © 2017 Eagle Lube - All Rights Reserved<br> Web Design by John Campbell
+    </div>
 </footer>
