--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -4,7 +4,6 @@ body {
     width: 100%;
 }
 
-
 .content-region3 {
     display: flex;
     justify-content: center;
@@ -68,5 +67,12 @@ footer li:last-child {
     margin-top: .5rem;
 }
 
+.location-container h3 {
+    padding-top: 0;
+    margin-top: 0;
+}
 
-
+.location-container h2 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
